[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/theme.theme" type="Theme" id=1]
[ext_resource path="res://scripts/levels_redesign.gd" type="Script" id=2]
[ext_resource path="res://scripts/border.gd" type="Script" id=3]

[node name="Viewport" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Levels" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 700.0
script = ExtResource( 2 )

[node name="NamesContainer" type="MarginContainer" parent="Levels"]
margin_right = 1240.0
margin_bottom = 59.0
script = ExtResource( 3 )

[node name="Names" type="HBoxContainer" parent="Levels/NamesContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1220.0
margin_bottom = 39.0

[node name="Previous" type="Label" parent="Levels/NamesContainer/Names"]
margin_right = 557.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "<"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current" type="Label" parent="Levels/NamesContainer/Names"]
margin_left = 565.0
margin_right = 635.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 0.690196, 0, 1 )
text = "CURRENT"
align = 1

[node name="Next" type="Label" parent="Levels/NamesContainer/Names"]
margin_left = 643.0
margin_right = 1200.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = ">"

[node name="Level" type="HBoxContainer" parent="Levels"]
margin_top = 67.0
margin_right = 1240.0
margin_bottom = 680.0
size_flags_vertical = 3

[node name="CodeContainer" type="MarginContainer" parent="Levels/Level"]
margin_right = 616.0
margin_bottom = 613.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="Code" type="Label" parent="Levels/Level/CodeContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 596.0
margin_bottom = 593.0
size_flags_vertical = 3

[node name="Info" type="VBoxContainer" parent="Levels/Level"]
margin_left = 624.0
margin_right = 1240.0
margin_bottom = 613.0
size_flags_horizontal = 3

[node name="Display" type="MarginContainer" parent="Levels/Level/Info"]
margin_right = 616.0
margin_bottom = 302.0
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Footer" type="HBoxContainer" parent="Levels/Level/Info"]
margin_top = 310.0
margin_right = 616.0
margin_bottom = 613.0
size_flags_vertical = 3

[node name="Meta" type="VBoxContainer" parent="Levels/Level/Info/Footer"]
margin_right = 304.0
margin_bottom = 303.0
size_flags_horizontal = 3

[node name="StatsContainer" type="MarginContainer" parent="Levels/Level/Info/Footer/Meta"]
margin_right = 304.0
margin_bottom = 125.0
script = ExtResource( 3 )

[node name="Stats" type="Label" parent="Levels/Level/Info/Footer/Meta/StatsContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 284.0
margin_bottom = 105.0
size_flags_horizontal = 3
text = "Best-case time:
Average-case time:
Worst-case time:
Worst-case space:"

[node name="ScoresContainer" type="MarginContainer" parent="Levels/Level/Info/Footer/Meta"]
margin_top = 133.0
margin_right = 304.0
margin_bottom = 303.0
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Scores" type="HBoxContainer" parent="Levels/Level/Info/Footer/Meta/ScoresContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 284.0
margin_bottom = 150.0

[node name="Sizes" type="Label" parent="Levels/Level/Info/Footer/Meta/ScoresContainer/Scores"]
margin_right = 30.0
margin_bottom = 129.0
text = "
8
16
32
64
128"

[node name="Times" type="Label" parent="Levels/Level/Info/Footer/Meta/ScoresContainer/Scores"]
margin_left = 38.0
margin_right = 264.0
margin_bottom = 129.0
size_flags_horizontal = 3
text = "HIGH SCORES
INF
INF
INF
INF
INF"
align = 1

[node name="ControlsContainer" type="MarginContainer" parent="Levels/Level/Info/Footer"]
margin_left = 312.0
margin_right = 616.0
margin_bottom = 303.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="Controls" type="Label" parent="Levels/Level/Info/Footer/ControlsContainer"]
margin_left = 20.0
margin_top = 142.0
margin_right = 284.0
margin_bottom = 161.0
size_flags_horizontal = 3

[node name="Timer" type="Timer" parent="Levels"]
[connection signal="timeout" from="Levels/Timer" to="Levels" method="_on_Timer_timeout"]
